# adventofcode2024

haskell/day01/part1/: CHANGELOG.md  historianhisteria.cabal
haskell/day01/part1/app/: Main.hs
haskell/day01/part2/: CHANGELOG.md  historianhisteriap2.cabal
haskell/day01/part2/app/: Main.hs
