cabal-version:   3.12
name:            historianhisteriap2
version:         0.1.0.0
license:         NONE
author:          Thane Thomson
maintainer:      connect@thanethomson.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable historianhisteriap2
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, containers
    hs-source-dirs:   app
    default-language: Haskell2010
